[tool.poetry]
name = "repl-nix-dsa-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_dsa_learning"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
markdown = "^3.6"
flask-admin = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
